doc-index-updater/overlays/non-prod/lock-timeout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
spec:
  template:
    spec:
      containers:
        - name: doc-index-updater
