doc-index-updater/overlays/non-prod/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: doc-index-updater-ingressgateway
  namespace: istio-system
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - doc-index-updater.non-prod.mhra.gov.uk
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https-443-doc-index-updater
        protocol: HTTPS
      hosts:
        - doc-index-updater.non-prod.mhra.gov.uk
      tls:
        mode: SIMPLE
        credentialName: cert-doc-index-updater
