doc-index-updater/overlays/non-prod/internal-lb-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: doc-index-updater-allow
spec:
  selector:
    matchLabels:
      app: doc-index-updater
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - /0
